--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <span><i><ion-icon name="call-outline"></ion-icon></i></span><label>+91 8452840880</label>
                 </div>
                 <div class="socialmedia">
-                    <span><i><ion-icon name="logo-linkedin"></ion-icon></i></span><label>linkedin.com/in/babithg</label>
+                    <span><i><ion-icon name="logo-linkedin"></ion-icon></i></span><a href="https://www.linkedin.com/in/babithg/">linkedin.com/in/babithg</a>
                 </div>
             </div>    
         </div>
@@ -100,19 +100,25 @@
                     <label>TECHNICAL SKILLS</label>
                     <div class="catagory">
                         <h3>Programming Languages</h3>
-                        <p>Python</p>
-                        <p>Javascript</p>
+                        <div class="lists">
+                            <p>Python</p>
+                            <p>JavaScript</p>
+                        </div>
                     </div>
                     <div class="catagory">
                         <h3>Web Technologies</h3>
-                        <p>djnago</p>
-                        <p>jquery</p>
+                        <div class="lists">
+                            <p>Django</p>
+                            <p>Jquery</p>
+                        </div>
                     </div>
                     <div class="catagory">
                         <h3>Miscellaneous</h3>
-                        <p>Git</p>
-                        <p>GitHub</p>
-                        <p>Jenkins</p>
+                        <div class="lists">
+                            <p>Git</p>
+                            <p>GitHub</p>
+                            <p>Jenkins</p>
+                        </div>
                     </div>
                 </div>
                 <div class="education">
@@ -129,14 +135,15 @@
                 <div class="languages">
                     <label>LANGUAGES</label>
                     <ul>
-                        <li>Malayalam - Native </li>
-                        <li>English - Professional working proficiency</li>
-                        <li>Hindi - Professional working proficiency</li>
+                        <li><span>Malayalam </span> - Native </li>
+                        <li><span>English</span> - Professional working proficiency</li>
+                        <li><span>Hindi</span> - Professional working proficiency</li>
                     </ul>
                 </div>
             </div>
         </div>
     </section> 
+    <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>    
 </body>
